albc/ingress/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-load-balancer-controller-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: nautible-alb-ingress
    alb.ingress.kubernetes.io/healthcheck-port: '31234'
    alb.ingress.kubernetes.io/healthcheck-path: '/healthz/ready'
    # 対象のセキュリティグループに変更する。idまたは名称を指定する。
    # Blue/Greenデプロイの場合など複数バージョンのKubernetesが稼働する環境ではセキュリティグループの名前にバージョンも含めておいたほうが良い。
    alb.ingress.kubernetes.io/security-groups: 'nautible-dev-cluster-v1_31-albc-sg'
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
